[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.5.3"
clap = {version = "^4.0.12", features = ["derive"]}
rand = {version = "0.8.5", features = ["alloc"]}
zipf = "7.0.0"
tokio = {version = "1.21.2", features = ["full"]}
serde = {version = "1.0.147", features = ["serde_derive"]}
bincode = "1.3.3"